// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single fields null field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-null"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  />
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-51"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-52"
          >
            <span
              className="ms-Button-label label-54"
              id="id__33"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields number field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-number"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-58"
      htmlFor="root"
    >
      undefined
    </label>
    <div
      className="css-59"
    >
      
      <div
        className="css-63"
        id="root"
        onChange={[Function]}
      >
        <input
          aria-disabled={false}
          aria-labelledby=""
          aria-valuemax={Infinity}
          aria-valuemin={-Infinity}
          aria-valuenow={-Infinity}
          autoComplete="off"
          className="ms-spinButton-input css-64"
          data-lpignore={true}
          disabled={false}
          id="input23"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          role="spinbutton"
          type="text"
          value="-Infinity"
        />
        <span
          className="css-65"
        >
          <button
            aria-label="Increase value by 1"
            className="ms-Button ms-Button--icon ms-UpButton root-66"
            data-is-focusable={false}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            tabIndex={-1}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-51"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-69 ms-Button-icon icon-67"
                data-icon-name="ChevronUpSmall"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-2\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            aria-label="Decrease value by 1"
            className="ms-Button ms-Button--icon ms-DownButton root-66"
            data-is-focusable={false}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            tabIndex={-1}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-51"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-70 ms-Button-icon icon-67"
                data-icon-name="ChevronDownSmall"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-3\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-51"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-52"
          >
            <span
              className="ms-Button-label label-54"
              id="id__30"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields string field format data-url 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div>
      <p>
        <input
          autoFocus={false}
          defaultValue=""
          disabled={false}
          id="root"
          onChange={[Function]}
          type="file"
        />
      </p>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-51"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-52"
          >
            <span
              className="ms-Button-label label-54"
              id="id__19"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields string field format email 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-42"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-43"
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-44"
            disabled={false}
            id="root"
            name="nodejs"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            readOnly={false}
            type="email"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-51"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-52"
          >
            <span
              className="ms-Button-label label-54"
              id="id__10"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields string field format uri 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-42"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-43"
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-44"
            disabled={false}
            id="root"
            name="nodejs"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            readOnly={false}
            type="url"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-51"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-52"
          >
            <span
              className="ms-Button-label label-54"
              id="id__16"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields string field regular 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-42"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-43"
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-44"
            disabled={false}
            id="root"
            name="nodejs"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            readOnly={false}
            type="string"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-51"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-52"
          >
            <span
              className="ms-Button-label label-54"
              id="id__4"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields unsupported field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-undefined"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="unsupported-field"
    >
      <p>
        Unsupported field schema
        <span>
           for
           field 
          <code>
            root
          </code>
        </span>
        <em>
          : 
          Unknown field type undefined
        </em>
        .
      </p>
      <pre>
        {}
      </pre>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-51"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-52"
          >
            <span
              className="ms-Button-label label-54"
              id="id__36"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;
